[package]
name = "proserve"
version = "0.1.0"
edition = "2018"
default-run = "pslocal"

[[bin]]
name = "proserve"
path = "src/bin/shuttle.rs"

[[bin]]
name = "pslocal"
path = "src/bin/pslocal.rs"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
headers = "0.4.0"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.tokio]
version = "1.42.0"
features = [
    "rt", 
    "net", 
    "tracing"
] 
